--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id = "cuerpo">
         <header>
             <div id = "logo">
-                <img src="/images/banner.jpg">
+                <img src="images/banner.jpg">
                 <h1>Green Costa Rica</h1>
             </div>
         </header>
@@ -34,7 +34,7 @@
                 <div id="content">
                     <h1>Noticias</h1>
                     <h2>06/10/2017</h2>
-                    <img src="/images/info.png" alt="Arbol" class="imginfo">
+                    <img src="images/info.png" alt="Arbol" class="imginfo">
                     <p>Vista Los Sueños Rainforest Tours le ofrece impresionantes Cataratas, sorprendentes
                         vistas del Golfo de Nicoya y el Océano pacífico mientras que dentro de la propiedad podrá
                         tener la oportunidad de admirar vida silvestre como Guacamayas, Tucanes y Monos
@@ -43,10 +43,10 @@
 
                 <div id="content">
                     <h1>Relevante</h1>
-                    <img src="/images/info.png" alt="Arbol" class="imginfo">
+                    <img src="images/info.png" alt="Arbol" class="imginfo">
                     <p>Costa Rica es un jardín de juegos para los amantes de la naturaleza, y sin importar su
                         estado de ánimo, usted encontrara un verdadero paraíso para hacerlo.</p>
-                    <img src="/images/info.png" alt="Arbol" class="imginfo">
+                    <img src="images/info.png" alt="Arbol" class="imginfo">
                     <p>La conservación del medio ambiente y el crecimiento económico va de la mano, es por
                         eso que Costa Rica apuesta a un Ecoturismo sostenible.</p>
                 </div>
@@ -72,7 +72,7 @@
 
                 <article>
                     <h1>Visite Costa Rica</h1>
-                    <img src="/images/fancybox_small.jpg" alt="Rana" class="imginfo2">
+                    <img src="images/fancybox_small.jpg" alt="Rana" class="imginfo2">
                     <p>Aunque el área de Costa Rica tiene poco más de 51,100 kms cuadrados es
                         hogar del 5% de la biodiversidad mundial, y sus habitantes están sumamente
                         comprometidos en la protección de este magnífico paraíso.</p>
