--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id = "cuerpo">
         <header>
             <div id = "logo">
-                <img src="images/banner.jpg">
+                <img src="./images/banner.jpg">
                 <h1>Green Costa Rica</h1>
             </div>
         </header>
